Change in HomePage

--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -127,13 +127,13 @@
             </div>
 
             <div class ="furnitureImages">
-                <img src="Images/1.jpg" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{% static 'Raul/Images/1.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage">
                 <div class="textMiddle">
                     <div class="textInfo">
                         SHOP.
                     </div>
                 </div>
-                <img src="Images/7.jpg" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{% static 'Raul/Images/7.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage">
             </div>
         </div>
     </div>
@@ -151,13 +151,13 @@
             </div>
 
             <div class ="furnitureImages">
-                <img src="Images/9.jpg" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{% static 'Raul/Images/9.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage">
                 <div class="textMiddle">
                     <div class="textInfo">
                         SHOP.
                     </div>
                 </div>
-                <img src="Images/8.jpg" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{% static 'Raul/Images/8.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage">
             </div>
         </div>
     </div>
@@ -175,13 +175,13 @@
             </div>
 
             <div class ="furnitureImages">
-                <img src="Images/3.jpg" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{% static 'Raul/Images/3.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage">
                 <div class="textMiddle">
                     <div class="textInfo">
                         SHOP.
                     </div>
                 </div>
-                <img src="Images/10.jpg" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{% static 'Raul/Images/10.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage">
             </div>
         </div>
     </div>
@@ -199,13 +199,13 @@
             </div>
 
             <div class ="furnitureImages" id ="DecorativeSec">
-                <img src="Images/2.jpg" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{% static 'Raul/Images/2.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage">
                 <div class="textMiddle">
                     <div class="textInfo">
                         SHOP.
                     </div>
                 </div>
-                <img src="Images/11.jpg" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{% static 'Raul/Images/11.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage">
             </div>
         </div>
     </div>
@@ -223,13 +223,13 @@
             </div>
 
             <div class ="furnitureImages">
-                <img src="Images/5.jpg" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{% static 'Raul/Images/5.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage">
                 <div class="textMiddle">
                     <div class="textInfo">
                         SHOP.
                     </div>
                 </div>
-                <img src="Images/6.jpg" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{% static 'Raul/Images/6.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage">
             </div>
         </div>
     </div>
