--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -97,7 +97,7 @@
                 </div>
                     <span>FURNITURE</span>
                 <div class = "linksShop">
-                    | <a href="{% url 'home' %}#FlowerSec">FLORAL</a> | <a href="{% url 'home' %}#TableSec">TABLE TOP</a> | <a href="{% url 'home' %}#LightingSec">LIGHTING</a> | <a href="{% url 'home' %}#WallSec">WALL ART</a> | <a href ="{% url 'home' %}#DecorativeSec">DECORATIVE ACCESSORIES</a> |
+                    <a href="#FlowerSec">FLORAL</a> | <a href="#TableSec">TABLE TOP</a> | <a href="#FurnitureSec">FURNITURE</a> | <a href="#WallSec">WALL ART</a> | <a href ="#DecorativeSec">DECORATIVE ACCESSORIES</a> |                
                 </div>
             </div>
 
