--- a/Raul/templates/Raul/landing.html
+++ b/Raul/templates/Raul/landing.html
@@ -21,7 +21,9 @@
             <video src="{% static 'Raul/Images/.flor.mp4.icloud' %}" autoplay muted loop></video>
         </div>
     </a>
-    <a href="{% url 'Raul-Home' %}">
+<!--    <a href="{% url 'Raul-Home' %}">-->
+
+    <a href="{% url 'Raul-SecondHome' %}">
         <div class="container">
             <p id ="raul"><img src="{% static 'Raul/Images/raullogo.png' %}" alt="logo"></p>
             <video src="{% static 'Raul/Images/.raul.mp4.icloud' %}" autoplay muted loop></video>
