--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -82,7 +82,7 @@
         <div id="main-nav" class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
                 <li><a href="{% url 'Raul-Home' %}" class="nav-item nav-link">Home</a></li>
-                <li><a href="{% url 'Raul-SecondHome' %}" class="nav-item nav-link">Other Home Page</a></li>
+                <li><a href="{% url 'Raul-SecondHome' %}" class="nav-item nav-link">Other</a></li>
                 <li><a href="{% url 'Raul-Home' %}" class="nav-item nav-link">Home3</a></li>
                 <li class="dropdown">
                     <a href="#" class="nav-item nav-link" data-toggle="dropdown">Store</a>
